Re make fabritect to load faster (async) but still a WIP
Make a /src folder
- index : Fabritect
- helper - helper files
- validate - TODO : Check if code is invalid

Issues:
- Need to fix async loading with file reading because the internal "attemptToLoad" will be called before the awaition of a promise.

- Properly intergrate the versioning system

- Make docs

--- a/examples/simple/plugins/example/package.json
+++ b/examples/simple/plugins/example/package.json
@@ -5,14 +5,11 @@
   "main": "main.js",
   "author": "",
   "license": "MIT",
-  "plugin": {
-    "consumes": [
-      "APP:HTTP@1.0.0"
-    ],
-    "exports": {
-      "GLOBAL": [
-        "exampleFunction"
-      ]
+  "fabritect": {
+    "for": ["Observo"],
+    "consumes": {
+      "app@http": "1.0.0",
+      "app@math": "1.0.0"
     }
   }
 }
