--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^2.4.2",
     "glob": "^7.1.3",
-    "node-eval": "^2.0.0"
+    "node-eval": "^2.0.0",
+    "treeify": "^1.1.0"
   }
 }
