Fixed promised issues, add a discord bot example.
Changes:
- Made file loading promised based so each folder will have to be waited on before it can be resolve (or rejected)
- Added a discord bot example, which works great

Todo:
- Add more example for simple, and even really large scale projects.
- Create Documentation for Fabritect
- Get the npm package (fabritect or @importcore/fabritect)
???
- fix the package file

--- a/examples/discordbot/app/command/package.json
+++ b/examples/discordbot/app/command/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "storage",
+  "name": "command",
   "version": "1.0.0",
   "description": "An example plugin",
   "main": "main.js",
@@ -8,7 +8,7 @@
   "fabritect": {
     "for": ["Observo"],
     "consumes": {
-   
+      "app@core": "1.0.0"
     }
   }
 }
