--- a/examples/discordbot/plugins/disko/package.json
+++ b/examples/discordbot/plugins/disko/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "http",
+  "name": "example",
   "version": "1.0.0",
   "description": "An example plugin",
   "main": "main.js",
@@ -8,7 +8,8 @@
   "fabritect": {
     "for": ["Observo"],
     "consumes": {
-    
+      "app@command": "1.0.0",
+      "app@core": "1.0.0"
     }
   }
 }
