--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "license": "MIT",
   "dependencies": {
     "chalk": "^2.4.2",
+    "discord.js": "^11.4.2",
     "glob": "^7.1.3",
     "node-eval": "^2.0.0",
+    "node-fetch": "^2.3.0",
+    "snekfetch": "^4.0.4",
     "treeify": "^1.1.0"
   }
 }
