--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
   "name": "fabritect",
-  "version": "1.0.0",
-  "description": "",
+  "version": "2.0.0",
+  "description": "A modular module manger. Fabricate an architecture around a project",
   "main": "fabritect.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "ImportProgram <http://importprogram.me>",
   "license": "MIT",
   "dependencies": {
+    "@babel/code-frame": "^7.0.0",
     "chalk": "^2.4.2",
-    "discord.js": "^11.4.2",
     "glob": "^7.1.3",
-    "node-eval": "^2.0.0",
-    "node-fetch": "^2.3.0",
-    "snekfetch": "^4.0.4",
+    "parse-error": "^0.2.0",
     "treeify": "^1.1.0"
   }
 }
