--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fabritect",
   "version": "2.0.0",
   "description": "A modular module manger. Fabricate an architecture around a project",
-  "main": "fabritect.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
