--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fabritect",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A modular module manger. Fabricate an architecture around a project",
   "main": "src/index.js",
   "scripts": {
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/code-frame": "^7.0.0",
     "chalk": "^2.4.2",
+    "console-stamp": "^0.2.9",
     "glob": "^7.1.3",
     "parse-error": "^0.2.0",
     "treeify": "^1.1.0"
